<resources>
    <string name="app_name">Violet Rainbow</string>
    <string name="senpolia_image">Фотография сенполии</string>
    <string name="image_violet">Фотография фиалки</string>
    <string name="label_violet_name">Название:</string>
    <string name="text_plug">Текст Текст Текст</string>
    <string name="label_violet_breeder">Селекционер:</string>
    <string name="label_violet_year">Год создания:</string>
    <string name="label_violet_overview">Описание:</string>
    <string name="image_favourite">Изображение папки избранного</string>
    <string name="add_to_favourite">Добавлено в Избранное</string>
    <string name="remove_from_favourite">Удалено из Избранного</string>
    <string name="item_main">Главная</string>
    <string name="item_favourite">Избранное</string>
</resources>
