<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayoutDetailContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Light">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/article_keylines"
            app:expandedTitleMarginStart="@dimen/md_keylines"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageViewVioletImageC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_violet"
                android:fitsSystemWindows="false"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:background="@drawable/vat_amazonka_800" />

            <ImageView
                android:id="@+id/imageViewAddToFavouriteC"
                android:layout_width="@dimen/size_of_star"
                android:layout_height="@dimen/size_of_star"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="-30dp"
                android:contentDescription="@string/image_favourite"
                android:onClick="onClickChangeFavourite"
                app:srcCompat="@drawable/favourite_remove" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBarC"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/article_keylines"
            android:paddingEnd="@dimen/md_keylines">

            <ImageView
                android:id="@+id/imageViewAddToFavouriteBottomC"
                android:layout_width="@dimen/size_of_star"
                android:layout_height="@dimen/size_of_star"
                android:layout_gravity="top|end"
                android:layout_marginTop="-30dp"
                android:contentDescription="@string/image_favourite"
                android:onClick="onClickChangeFavourite"
                app:srcCompat="@drawable/favourite_remove" />

            <TextView
                android:id="@+id/textViewLabelVioletName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mb_label"
                android:text="@string/label_violet_name"
                android:textColor="@color/colorAccentDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewVioletName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/text_plug"
                android:layout_marginBottom="@dimen/mb_label" />

            <TextView
                android:id="@+id/textViewLabelVioletBreeder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_violet_breeder"
                android:textColor="@color/colorAccentDark"
                android:textSize="20sp"
                android:layout_marginBottom="@dimen/mb_label" />

            <TextView
                android:id="@+id/textViewVioletBreeder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/text_plug"
                android:layout_marginBottom="@dimen/mb_label" />

            <TextView
                android:id="@+id/textViewLabelVioletYear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/mb_label"
                android:text="@string/label_violet_year"
                android:textColor="@color/colorAccentDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewVioletYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/text_plug"
                android:layout_marginBottom="@dimen/mb_label" />

            <TextView
                android:id="@+id/textViewLabelVioletOverview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_violet_overview"
                android:textColor="@color/colorAccentDark"
                android:textSize="20sp"
                android:layout_marginBottom="@dimen/mb_label" />

            <TextView
                android:id="@+id/textViewVioletOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                tools:text="@string/text_plug" />



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>